--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username: mportesdev
 theme: minima
 plugins:
   - jekyll-feed
+post_excerpts: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
