--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: mportesdev
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/modernist
 plugins:
   - jekyll-feed
 post_excerpts: true
