List excluded files in config

--- a/_config.yml
+++ b/_config.yml
@@ -42,11 +42,12 @@ post_excerpts: true
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
+  - README.md
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
-#   - Gemfile
+  - Gemfile
 #   - Gemfile.lock
 #   - node_modules/
 #   - vendor/bundle/
