Add Stack Overflow to social list

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: https://mportesdev.github.io
 # twitter_username: jekyllrb
 github_username: mportesdev
+stackoverflow:
+  id: 8795073
+  username: mportes
 disqus:
   shortname: mportesdev
 
